k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: easy-gif-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: easygif.caiogomesdev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: easy-gif-service
                port:
                  number: 80
